--- a/class_function.ipynb
+++ b/class_function.ipynb
@@ -567,7 +567,7 @@
     "    door = 0 #문짝 개수\n",
     "    carType = None # null\n",
     "   \n",
-    "    def __init__(self, cc, door, carType):\n",
+    "    def __init__(self, cc, door, carType): #매개변수\n",
     "        self.cc = cc\n",
     "        self.door = door\n",
     "        self.carType = carType\n",
@@ -575,13 +575,48 @@
     "    def display(self):\n",
     "        print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s' % (self.cc, self.door, self.carType))\n",
     "          # %d, %s 등을 서식문자라 칭함 정수              정수         문자열\n",
-    "car1 = Car(2000,4,'승용차')\n",
+    "car1 = Car(2000,4,'승용차') #인수에 해당함\n",
     " \n",
     "car2  = Car(3000, 5, 'SUV')\n",
     " \n",
     "car1.display()\n",
     "car2.display()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "곱셈 =  200\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Mul:\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__(self, a, b):\n",
+    "        self.x=a\n",
+    "        self.y=b\n",
+    "        \n",
+    "    def Mul(self):\n",
+    "        return self.x*self.y\n",
+    "    \n",
+    "obj = Mul(10,20) \n",
+    "print('곱셈 = ', obj.Mul())                                                          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
