--- a/class_function.ipynb
+++ b/class_function.ipynb
@@ -613,10 +613,492 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나눗셈 =  2.0\n",
+      "********************************************************************************\n",
+      "제곱 =  16\n",
+      "********************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 내가 손수한 것.\n",
+    "\n",
+    "class Clac_class1:\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__ (self, a, b):\n",
+    "        self.x=a\n",
+    "        self.y=b\n",
+    "        \n",
+    "    def Div(self):\n",
+    "        return self.x / self.y\n",
+    "    \n",
+    "    def Squ(self):\n",
+    "        return self.x ** self.y\n",
+    "    \n",
+    "    \n",
+    "    #\n",
+    "    \n",
+    "    \n",
+    "obj = Clac_class1(int(input('정수를 입력하세요 :')), int(input('정수를 입력하세요 :')))\n",
+    "print('나눗셈 = ', obj.Div())\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "obj2 = Clac_class1(int(input('정수를 입력하세요 :')), int(input('정수를 입력하세요 :')))\n",
+    "print('제곱 = ', obj2.Squ())\n",
+    "\n",
+    "print('*'*80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나눗셈 : 1.0\n",
+      "제곱 : 3125\n"
+     ]
+    }
+   ],
+   "source": [
+    "class calc_class11 :\n",
+    "    # 멤버변수 없음\n",
+    "    def __init__(self, x, y) :\n",
+    "        self.num1 = x  #멤버변수 self.num1를 동적으로 생성함\n",
+    "        self.num2 = y\n",
+    "    def div(self, x, y):\n",
+    "        return self.num1 / self.num2\n",
+    "    def squ(self, x, y):\n",
+    "        return self.num1 ** self.num2\n",
+    "c1 = calc_class11(int(input(\"정수를 입력하세요 : \")),int(input(\"정수를 입력하세요 : \")))\n",
+    "print(\"나눗셈 :\", c1.div(c1.num1,c1.num2))\n",
+    "print(\"제곱 :\",c1.squ(c1.num1,c1.num2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 070일차-실습-2-해답-ver1\n",
+    "class calc_class11 :\n",
+    "    # 멤버변수 없음\n",
+    "    def __init__(self, x, y) :\n",
+    "        self.num1 = x  #멤버변수 self.num1를 동적으로 생성함\n",
+    "        self.num2 = y\n",
+    "    def div(self, x, y):\n",
+    "        return self.num1 / self.num2\n",
+    "    def squ(self, x, y):\n",
+    "        return self.num1 ** self.num2\n",
+    "c1 = calc_class11(int(input(\"정수를 입력하세요 : \")),int(input(\"정수를 입력하세요 : \")))\n",
+    "print(\"나눗셈 :\", c1.div(c1.num1,c1.num2))\n",
+    "print(\"제곱 :\",c1.squ(c1.num1,c1.num2))\n",
+    "#--------------------------------------------------------------\n",
+    "# 070일차-실습-2-해답-ver2\n",
+    "class calc_class11:\n",
+    "    #num1 = num2 = 0\n",
+    "    def __init__(self, x, y):\n",
+    "        self.num1 = x\n",
+    "        self.num2 = y\n",
+    "    def div(self):\n",
+    "        return self.num1 / self.num2\n",
+    "    def squ(self):\n",
+    "        return self.num1 ** self.num2\n",
+    "obj = calc_class11(int(input(\"정수를 입력하세요:\")),int(input(\"정수를 입력하세요:\")))\n",
+    "print (\"나눗셈\",obj.div())\n",
+    "print (\"제곱\",obj.squ())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나눗셈: 2.0\n",
+      "제곱: 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Clac_class11:\n",
+    "    num1 = num2 = 0 # 클래스의 변수\n",
+    "    def __init__(self, n1, n2):\n",
+    "        self.num1 = n1\n",
+    "        self.num2 = n2\n",
+    "    def div(self):\n",
+    "        return self.num1 / self.num2\n",
+    "    def squ(self):\n",
+    "        return self.num1 ** self.num2\n",
+    "    #        \n",
+    "x , y  = int(input('정수를 입력하세요:')), int(input('정수를 입력하세요:'))\n",
+    "obj = Clac_class11(x,y)\n",
+    "print('나눗셈:', obj.div())\n",
+    "print('제곱:', obj.squ())\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정수를 입력하세요: 4\n",
+      "********************************************************************************\n",
+      "정수를 입력하세요: 2\n",
+      "********************************************************************************\n",
+      "나눗셈 =  2.0\n",
+      "********************************************************************************\n",
+      "제곱 =  16\n",
+      "********************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 내가 손수한 것.\n",
+    "a= int(input('정수를 입력하세요 : '))\n",
+    "print(f'정수를 입력하세요: {a}')\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "b=int(input('정수를 입력하세요 : '))\n",
+    "print(f'정수를 입력하세요: {b}')\n",
+    "\n",
+    "print(\"*\"*80)\n",
+    "\n",
+    "\n",
+    "class Clac_class1:\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__ (self, a, b):\n",
+    "        self.x=a\n",
+    "        self.y=b\n",
+    "        \n",
+    "    def Div(self):\n",
+    "        return self.x / self.y\n",
+    "    \n",
+    "    def Squ(self):\n",
+    "        return self.x ** self.y\n",
+    "    \n",
+    "    \n",
+    "    #\n",
+    "    \n",
+    "    \n",
+    "obj = Clac_class1(int(input('정수를 입력하세요 :')), int(input('정수를 입력하세요 :')))\n",
+    "print('나눗셈 = ', obj.Div())\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "obj2 = Clac_class1(int(input('정수를 입력하세요 :')), int(input('정수를 입력하세요 :')))\n",
+    "print('제곱 = ', obj2.Squ())\n",
+    "\n",
+    "print('*'*80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나눗셈 결과: 2.0\n",
+      "제곱 결과: 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Clac_class12:\n",
+    "    num1 = 0  # 멤버변수 및 클래스변수\n",
+    "    num2 = 0  # 멤버변수 및 클래스변수\n",
+    "    \n",
+    "    def div(self):\n",
+    "        return self.num1 / self.num2\n",
+    "    \n",
+    "    def squ(self):\n",
+    "        return self.num1 ** self.num2\n",
+    "\n",
+    "    def member_clear(self):\n",
+    "        # 멤버변수 초기화\n",
+    "        self.num1 = 0\n",
+    "        self.num2 = 0\n",
+    "\n",
+    "\n",
+    "# 정수 2개 입력받기\n",
+    "num1_input = int(input('정수를 입력하세요: '))\n",
+    "num2_input = int(input('정수를 입력하세요: '))\n",
+    "\n",
+    "# Clac_class12 객체 생성\n",
+    "calc_obj = Clac_class12()\n",
+    "\n",
+    "# 입력받은 정수를 객체의 멤버변수에 할당\n",
+    "calc_obj.num1 = num1_input\n",
+    "calc_obj.num2 = num2_input\n",
+    "\n",
+    "# 나눗셈 결과 출력\n",
+    "print('나눗셈 결과:', calc_obj.div())\n",
+    "\n",
+    "# 제곱 결과 출력\n",
+    "print('제곱 결과:', calc_obj.squ())\n",
+    "\n",
+    "# 멤버변수 초기화\n",
+    "calc_obj.member_clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#<요구사항2>\n",
+    "#\n",
+    "#클래스이름 : Clac _class12\n",
+    "#\n",
+    "#멤버변수이면서 동시에 클래스변수 : \n",
+    "#\n",
+    "#   num1   # int 피연산자1\n",
+    "#\n",
+    "#   num2   # int 피연산자2\n",
+    "#\n",
+    "# \n",
+    "#\n",
+    "#생성자 : 없음\n",
+    "#\n",
+    "# \n",
+    "#\n",
+    "#멤버 메소드 :\n",
+    "#\n",
+    "#def div (self) :  # 나눗셈 메소드\n",
+    "#\n",
+    "#....\n",
+    "#\n",
+    "#....\n",
+    "#\n",
+    "# \n",
+    "#\n",
+    "#def squ (self) : # 제곱 메소드 num1이 4이고 num2가 2이면 4의 2제곱을 계산함\n",
+    "#\n",
+    "#....\n",
+    "#\n",
+    "#....\n",
+    "#\n",
+    "# \n",
+    "#\n",
+    "#------------------------------------------------------------------\n",
+    "#\n",
+    "#<요구사항3>\n",
+    "#\n",
+    "#생성자가 없으므로 이에 해당하는 member_clear 메소드를 만들고 여기서\n",
+    "#\n",
+    "#멤버변수의 값을 초기화 합니다.\n",
+    "#\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나눗셈은 0으로 나누기가 불가능합니다. 다시 입력하세요. \n",
+      "나눗셈 :  None\n",
+      "제곱 :  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Calc_class12:\n",
+    "    x = y = 0\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    def member_clear(self,a,b):\n",
+    "        self.x = a\n",
+    "        self.y = b\n",
+    "        \n",
+    "        \n",
+    "    def div(self):\n",
+    "        try:\n",
+    "            result = self.x / self.y\n",
+    "            return result\n",
+    "        except:\n",
+    "            print('나눗셈은 0으로 나누기가 불가능합니다. 다시 입력하세요. ')\n",
+    "            \n",
+    "\n",
+    "    def squ(self):\n",
+    "        return self.x ** self.y\n",
+    "    \n",
+    "obj = Calc_class12()\n",
+    "obj.member_clear(int(input('정수를 입력하세요 : ')), int(input('정수를 입력하세요: ')))\n",
+    "print('나눗셈 : ', obj.div())\n",
+    "print('제곱 : ', obj.squ())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 070일차-실습-4-해답-ver1\n",
+    "class Calc_class13:\n",
+    "    num1 = num2 = 0\n",
+    "    def member_clear(self, pNum1, pNum2):\n",
+    "        self.num1 = pNum1\n",
+    "        self.num2 = pNum2    \n",
+    "    def div(self):\n",
+    "        if self.num1 == 0 or self.num2 == 0:\n",
+    "            return print(\"나눗셈연산은 0으로 나누기가 불가능합니다. 다시 입력하세요.\")\n",
+    "        else:\n",
+    "            return self.num1 / self.num2\n",
+    "    def squ(self):\n",
+    "        return self.num1 ** self.num2\n",
+    "#\n",
+    "obj = Calc_class13()\n",
+    "obj.member_clear(int(input(\"1번째 정수를 입력하세요:\")),int(input(\"2번째 정수를 입력하세요:\")))\n",
+    "print (\"나눗셈 : \",obj.div())\n",
+    "print (\"제곱 : \",obj.squ())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 070일차-실습-4-해답-ver2\n",
+    "class Calc_class13:\n",
+    "    num1 = num2 = 0\n",
+    "    def member_clear(self, pNum1, pNum2):\n",
+    "        self.num1 = pNum1\n",
+    "        self.num2 = pNum2\n",
+    "    def div(self):\n",
+    "        try:\n",
+    "            return self.num1 / self.num2\n",
+    "        except:\n",
+    "            print(\"나눗셈은 0으로 나누기가 불가능합니다.다시 입력하세요\")\n",
+    "    def squ(self):\n",
+    "        return self.num1 ** self.num2\n",
+    "#\n",
+    "obj = Calc_class13()\n",
+    "obj.member_clear(int(input(\"1번째 정수를 입력하세요:\")),int(input(\"2번째 정수를 입력하세요:\")))\n",
+    "print (\"나눗셈 : \", obj.div())\n",
+    "print (\"제곱 : \", obj.squ())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 내가 손수한 것.\n",
+    "a= int(input('정수를 입력하세요 : '))\n",
+    "print(f'정수를 입력하세요: {a}')\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "b=int(input('정수를 입력하세요 : '))\n",
+    "print(f'정수를 입력하세요: {b}')\n",
+    "\n",
+    "print(\"*\"*80)\n",
+    "\n",
+    "\n",
+    "class Clac_class1:\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__ (self, a, b):\n",
+    "        self.x=a\n",
+    "        self.y=b\n",
+    "        \n",
+    "    def Div(self):\n",
+    "        return self.x / self.y\n",
+    "    \n",
+    "    def Squ(self):\n",
+    "        return self.x ** self.y\n",
+    "    \n",
+    "    \n",
+    "    #\n",
+    "    \n",
+    "    \n",
+    "obj = Clac_class1(int(input('정수를 입력하세요 :')), int(input('정수를 입력하세요 :')))\n",
+    "print('나눗셈 = ', obj.Div())\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "obj2 = Clac_class1(int(input('정수를 입력하세요 :')), int(input('정수를 입력하세요 :')))\n",
+    "print('제곱 = ', obj2.Squ())\n",
+    "\n",
+    "print('*'*80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DatePro:\n",
+    "    content = '날짜 처리 클래스' #객체의 멤버변수이자 클래스변수\n",
+    "    \n",
+    "    def __init__ (self, year, month, day):\n",
+    "        self.year = year\n",
+    "        self.month = month\n",
+    "        self.day = day\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('%d-%d-%d' % (self.year, self.month, self.day))\n",
+    "        \n",
+    "        print('*'*80)\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def date_string(cls, dateStr) :\n",
+    "        cls.year = int(dateStr[:4])\n",
+    "        cls.month = int(dateStr[4:6])\n",
+    "        cls.day = int(dateStr[6:])\n",
+    "        print(f'{cls.year}년 {cls.month}월 {cls.day}일')\n",
+    "        \n",
+    "date = DatePro(1995, 10, 25) #참조변수, 객체생성( 생성자호출 ) 참조변수(ex=obj)\n",
+    "print(date.content) #Content와 year의 차이 구분할 것. date대신 DatePro를 넣어보면 차이점을 알 수 있음.\n",
+    "print(date.year) # 전역변수고 클래스변수가 많아지면 메모리누수가 많아져서 좋지가 않다. 허락받고 해야한다.\n",
+    "date.display()\n",
+    "    \n",
+    "print(DatePro.content)\n",
+    "#print (DatePro.year) #AttributeError\n",
+    "DatePro.date_string('19951025') # 클래스명과 메서드명으로 호출 가능.\n",
+    "\n",
+    "# 클래스메소드를 쓰는가..\n",
+    "# 객체를 생성하기 이전에도 쓸 수 있는 무언가 장치로서의 메서드가 필요하다고 분석을 해서 만들어놓은 백도어같은것."
+   ]
   }
  ],
  "metadata": {
