--- a/연습.ipynb
+++ b/연습.ipynb
@@ -232,6 +232,97 @@
     "# 클래스메소드를 쓰는가..\n",
     "# 객체를 생성하기 이전에도 쓸 수 있는 무언가 장치로서의 메서드가 필요하다고 분석을 해서 만들어놓은 백도어같은것."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "날짜 처리 클래스\n",
+      "1995\n",
+      "1995-10-25\n",
+      "********************************************************************************\n",
+      "날짜 처리 클래스\n",
+      "1995년 10월 25일\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DataPro:\n",
+    "    content = '날짜 처리 클래스' # 객체의 멤버변수이자 클래스변수\n",
+    "    \n",
+    "    def __init__ (self, year, month, day):\n",
+    "        self.year = year\n",
+    "        self.month = month\n",
+    "        self.day = day\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('%d-%d-%d' % (self.year, self.month, self.day))\n",
+    "        \n",
+    "        print('*'*80)\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def date_string(cls, dateStr) :\n",
+    "        cls.year = int(dateStr[:4])\n",
+    "        cls.month = int(dateStr[4:6])\n",
+    "        cls.day = int(dateStr[6:])\n",
+    "        print(f'{cls.year}년 {cls.month}월 {cls.day}일')\n",
+    "              \n",
+    "date = DatePro(1995, 10, 25)\n",
+    "print(date.content)\n",
+    "print(date.year)\n",
+    "date.display()\n",
+    "\n",
+    "print(DatePro.content)\n",
+    "DatePro.date_string('19951025')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나눗셈 =  2.0\n",
+      "********************************************************************************\n",
+      "제곱 =  16777216\n",
+      "********************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Clac_class1:\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__ (self, a, b):\n",
+    "        self.x=a\n",
+    "        self.y=b\n",
+    "        \n",
+    "    def Div(self):\n",
+    "        return self.x / self.y\n",
+    "    \n",
+    "    def Squ(self):\n",
+    "        return self.x ** self.y\n",
+    "    \n",
+    "    #\n",
+    "    \n",
+    "obj = Clac_class1(int(input('정수를 입력하세요 : ')), int(input('정수를 입력하세요 :')))\n",
+    "print('나눗셈 = ', obj.Div())\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "obj2 = Clac_class1(int(input('정수를 입력하세요 :')), int(input('정수를 입력하세요 : ')))\n",
+    "print('제곱 = ', obj2.Squ())\n",
+    "\n",
+    "print('*'*80)"
+   ]
   }
  ],
  "metadata": {
