--- a/과제1.ipynb
+++ b/과제1.ipynb
@@ -2,6 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~객체 생성~~\n",
+      "plus =  30\n",
+      "minus = -10\n",
+      "~~객체 생성~~\n",
+      "plus =  160\n",
+      "minus = -20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class calc_class :\n",
+    "    # 변수 선언\n",
+    "    x = y = 0\n",
+    "    # 생성자 : 객체 생성 + [멤버변수 초기화]\n",
+    "    def __init__(self, a, b):\n",
+    "        print('~~객체 생성~~')\n",
+    "        self.x = a # 10\n",
+    "        self.y = b # 20\n",
+    "    # 멤버 함수(기능)\n",
+    "    def plus(self): # self : 멤버(변수+함수) 참조 객체\n",
+    "        p = self.x + self.y\n",
+    "        '''\n",
+    "        p : 지역변수\n",
+    "        self.x, self.y : 전역변수  \n",
+    "        '''\n",
+    "        return p\n",
+    "    def minus(self):\n",
+    "        m = self.x - self.y\n",
+    "        return m\n",
+    "# class(1) -> object(n) 생성\n",
+    "obj1 = calc_class(10, 20) # 생성자 -> 객체1  \n",
+    "# object.member()  \n",
+    "print('plus = ', obj1.plus()) # plus =  30\n",
+    "print('minus =', obj1.minus()) # minus = -10\n",
+    "#\n",
+    "obj03 = calc_class(70,90)\n",
+    "print('plus = ', obj03.plus())\n",
+    "print('minus =', obj03.minus())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -261,6 +310,135 @@
     "        \n",
     "chil = Children('이순신', '해군 장군', '남자')\n",
     "chil.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 수령액 : 3200000 \n",
+      "총 수령액 : 1200000 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# (1) 부모클래스\n",
+    "class Employee:\n",
+    "    name = None\n",
+    "    pay = 0\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def pay_calc(self):\n",
+    "        pass\n",
+    "# (2) 자식클래스 : 정규직\n",
+    "class Permanent (Employee):\n",
+    "    def __init__(self, name):\n",
+    "        #super().__init__(name):    \n",
+    "        self.name = name\n",
+    "        \n",
+    "    def pay_calc(self, base, bonus):\n",
+    "        self.pay = base + bonus #급여 = 기본급 + 상여금 \n",
+    "        print('총 수령액 : %d ' % (self.pay))\n",
+    "        #print('총 수령액 : ', format(self.pay, ' 3,d'), '원')\n",
+    "    \n",
+    "# (3) 자식클래스 : 임시직\n",
+    "class Temporary(Employee):\n",
+    "    def __init__(self, name):\n",
+    "        #super().__init__(name) #부모 생성자 호출\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def pay_calc(self, tpay, time):\n",
+    "        self.pay = tpay * time # 급여 = 시급 * 작업시간\n",
+    "        print('총 수령액 : %d ' % (self.pay))\n",
+    "        #print(f'총 수령액 : ', format(self.pay, '3,d'), '원')\n",
+    "        \n",
+    "# (4) 객체 생성\n",
+    "\n",
+    "p = Permanent('이순신') #참조변수 * 메소드 \n",
+    "p.pay_calc(3000000, 200000)\n",
+    "\n",
+    "t = Temporary('홍길동') #참조변수 * 메소드\n",
+    "t.pay_calc(15000, 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 수령액 : 3200000 \n",
+      "총 수령액 : 1200000 \n",
+      "총 수령액 : 3360000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (1) 부모클래스\n",
+    "class Employee:\n",
+    "    name = None\n",
+    "    pay = 0\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def pay_calc(self):\n",
+    "        pass\n",
+    "# (2) 자식클래스 : 정규직\n",
+    "class Permanent (Employee):\n",
+    "    def __init__(self, name):\n",
+    "        #super().__init__(name):    \n",
+    "        self.name = name\n",
+    "        \n",
+    "    def pay_calc(self, base, bonus):\n",
+    "        self.pay = base + bonus #급여 = 기본급 + 상여금 \n",
+    "        print('총 수령액 : %d ' % (self.pay))\n",
+    "        #print('총 수령액 : ', format(self.pay, ' 3,d'), '원')\n",
+    "    \n",
+    "# (3) 자식클래스 : 임시직\n",
+    "class Temporary(Employee):\n",
+    "    def __init__(self, name):\n",
+    "        #super().__init__(name) #부모 생성자 호출\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def pay_calc(self, tpay, time):\n",
+    "        self.pay = tpay * time # 급여 = 시급 * 작업시간\n",
+    "        print('총 수령액 : %d ' % (self.pay))\n",
+    "        #print(f'총 수령액 : ', format(self.pay, '3,d'), '원')\n",
+    "        \n",
+    "class Alba(Temporary):\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def pay_calc(self, tpay, time):\n",
+    "        self.pay = tpay * time\n",
+    "        if time >= 160:\n",
+    "            self.pay = tpay * time + 8 * tpay\n",
+    "        else:\n",
+    "            self.pay = tpay * time\n",
+    "        \n",
+    "        print('총 수령액 : %d' % (self.pay))\n",
+    "        \n",
+    "# (4) 객체 생성\n",
+    "\n",
+    "p = Permanent('이순신') #참조변수 * 메소드 \n",
+    "p.pay_calc(3000000, 200000)\n",
+    "\n",
+    "t = Temporary('홍길동') #참조변수 * 메소드\n",
+    "t.pay_calc(15000, 80)\n",
+    "\n",
+    "a = Alba('김형경')\n",
+    "a.pay_calc(20000, 160)"
    ]
   }
  ],
