--- a/과제1.ipynb
+++ b/과제1.ipynb
@@ -370,16 +370,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "총 수령액 : 3200000 \n",
-      "총 수령액 : 1200000 \n",
-      "총 수령액 : 3360000\n"
+      "총 수령액 :   3,200,000 원\n",
+      "총 수령액 :  1,200,000 원\n",
+      "총 수령액 :  3,360,000 원\n"
      ]
     }
    ],
@@ -402,8 +402,8 @@
     "        \n",
     "    def pay_calc(self, base, bonus):\n",
     "        self.pay = base + bonus #급여 = 기본급 + 상여금 \n",
-    "        print('총 수령액 : %d ' % (self.pay))\n",
-    "        #print('총 수령액 : ', format(self.pay, ' 3,d'), '원')\n",
+    "        #print('총 수령액 : %d ' % (self.pay))\n",
+    "        print('총 수령액 : ', format(self.pay, ' 3,d'), '원')\n",
     "    \n",
     "# (3) 자식클래스 : 임시직\n",
     "class Temporary(Employee):\n",
@@ -413,10 +413,10 @@
     "        \n",
     "    def pay_calc(self, tpay, time):\n",
     "        self.pay = tpay * time # 급여 = 시급 * 작업시간\n",
-    "        print('총 수령액 : %d ' % (self.pay))\n",
-    "        #print(f'총 수령액 : ', format(self.pay, '3,d'), '원')\n",
+    "        #print('총 수령액 : %d ' % (self.pay))\n",
+    "        print(f'총 수령액 : ', format(self.pay, '3,d'), '원')\n",
     "        \n",
-    "class Alba(Temporary):\n",
+    "class Alba(Employee):\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "    \n",
@@ -427,8 +427,8 @@
     "        else:\n",
     "            self.pay = tpay * time\n",
     "        \n",
-    "        print('총 수령액 : %d' % (self.pay))\n",
-    "        \n",
+    "        #print('총 수령액 : %d' % (self.pay))\n",
+    "        print(f'총 수령액 : ', format(self.pay, '3,d'), '원')\n",
     "# (4) 객체 생성\n",
     "\n",
     "p = Permanent('이순신') #참조변수 * 메소드 \n",
@@ -439,6 +439,427 @@
     "\n",
     "a = Alba('김형경')\n",
     "a.pay_calc(20000, 160)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 수령액 :  3,200,000 원\n",
+      "총 수령액 :  1,200,000 원\n",
+      "총 수령액 :  3,360,000 원\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 072일차-실습-2-해답\n",
+    "class Employee: # (1) 부모클래스\n",
+    "    name = None; pay = 0\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def pay_calc(self):\n",
+    "        pass\n",
+    "class Permanent(Employee): # (2) 자식클래스 : 정규직\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name)  # 부모 생성자 호출\n",
+    "    def pay_calc(self, base, bonus): # 메소드 오버라이드\n",
+    "        self.pay = base + bonus  # 급여 = 기본급+상여금\n",
+    "        print('총 수령액 : ', format(self.pay, '3,d'),'원')\n",
+    "class Temporary(Employee): # (3) 자식클래스 : 임시직\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name)  # 부모 생성자 호출\n",
+    "    def pay_calc(self, tpay, time):  # 메소드 오버라이드\n",
+    "        self.pay = tpay * time # 급여 = 작업시간*시급\n",
+    "        print('총 수령액 : ', format(self.pay, '3,d'),'원')\n",
+    "class Alba(Employee): # (3) 자식클래스 : 알바\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name)  # 부모 생성자 호출\n",
+    "    def pay_calc(self, tpay, time):  # 메소드 오버라이드\n",
+    "        if time >= 160 :\n",
+    "            self.pay = tpay * time + (tpay * 8) # 급여 = 작업시간*시급 +(수당)\n",
+    "        elif time < 160 :\n",
+    "            self.pay = tpay * time              # 급여 = 작업시간*시급\n",
+    "        print('총 수령액 : ', format(self.pay, '3,d'),'원')\n",
+    "# (4) 객체 생성\n",
+    "p = Permanent(\"이순신\")\n",
+    "p.pay_calc(3000000, 200000)\n",
+    "t = Temporary(\"홍길동\")\n",
+    "t.pay_calc(15000, 80)\n",
+    "a = Alba(\"알바\")\n",
+    "a.pay_calc(20000,160)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flight addr1--> <__main__.Flight object at 0x0000012F55F33F90>\n",
+      "air addr1--> <__main__.Airplane object at 0x0000012F55F18890>\n",
+      "bird addr1--> <__main__.Bird object at 0x0000012F55F31E10>\n",
+      "paper addr1--> <__main__.PaperAirplane object at 0x0000012F55EC4890>\n",
+      "날다, fly 원형 메서드\n",
+      "flight addr2--> <__main__.Airplane object at 0x0000012F55F18890>\n",
+      "비행기가 날다.\n",
+      "flight addr3--> <__main__.Bird object at 0x0000012F55F31E10>\n",
+      "새가 날다.\n",
+      "flight addr4--> <__main__.PaperAirplane object at 0x0000012F55EC4890>\n",
+      "종이 비행기가 날다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다형성(polymorphism)이라는 용어는 '여러가지 형태를 가질 수 있는 능력'을 말함.\n",
+    "\n",
+    "# 객체지향프로그래밍에서 다형성은 하나의 참조변수로 여러 타입의 객체를 참조할 수 있는 것으로 정의됨.\n",
+    "\n",
+    "# 부모 객체의 참조변수로 자식 객체를 다룰 수 있다는 의미가 객체지향기법에서 다형성임.\n",
+    "# 다형성은 클래스의 상속관계에서만 나올 수 있는 용어임. + 오버라이드\n",
+    "\n",
+    "class Flight:\n",
+    "    \n",
+    "    def fly(self):\n",
+    "        print('날다, fly 원형 메서드')\n",
+    "        \n",
+    "class Airplane(Flight):\n",
+    "    \n",
+    "    def fly(self):\n",
+    "        print('비행기가 날다.')\n",
+    "        \n",
+    "#-----------------------------------------------------------\n",
+    "\n",
+    "class Bird(Flight):\n",
+    "    \n",
+    "    def fly(self):\n",
+    "        print('새가 날다.')\n",
+    "        \n",
+    "class PaperAirplane(Flight):\n",
+    "    \n",
+    "    def fly(self):\n",
+    "        print('종이 비행기가 날다.')\n",
+    "        \n",
+    "# 객체 생성        \n",
+    "flight = Flight() # 부모 클래스 객체 참조변수\n",
+    "air = Airplane()  # 자식1클래스 객체 참조변수\n",
+    "bird = Bird()  #자식2 클래스 객체 참조변수\n",
+    "paper = PaperAirplane()  # 자식3 클래스 객체 참조변수\n",
+    "\n",
+    "print('flight addr1-->', flight)  #부모 클래스 객체 참조변수 주소 확인1\n",
+    "print('air addr1-->', air) #자식1 클래스 객체 참조변수 주소 확인1\n",
+    "print('bird addr1-->', bird) #자식2 클래스 객체 참조변수 주소 확인1\n",
+    "print('paper addr1-->', paper) #자식3 클래스 객체 참조변수 주소 확인1\n",
+    "\n",
+    "\n",
+    "\n",
+    "# (4) 다형성\n",
+    "flight.fly() #날다, fly 원형 메서드\n",
+    "\n",
+    "flight = air\n",
+    "print('flight addr2-->', flight)\n",
+    "flight.fly()\n",
+    "\n",
+    "flight = bird\n",
+    "print('flight addr3-->', flight)\n",
+    "flight.fly()\n",
+    "\n",
+    "flight = paper\n",
+    "print('flight addr4-->', flight)\n",
+    "flight.fly()\n",
+    "\n",
+    "\n",
+    "# 부모객체 참조변수 = 자식객체 참조변수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3) 객체 생성-2==============>\n",
+      "날다, fly 원형 메서드\n",
+      "비행기가 날다.\n",
+      "새가 날다.\n",
+      "종이 비행기가 날다.\n",
+      "(4) 다형성==============>\n",
+      "비행기가 날다.\n",
+      "새가 날다.\n",
+      "종이 비행기가 날다.\n",
+      "********************************************************************************\n",
+      "<__main__.Ufo object at 0x0000012F55C3E310>\n",
+      "<__main__.Flight object at 0x0000012F55F16D10>\n",
+      "********************************************************************************\n",
+      "UFO가 날아다닙니다.\n",
+      "<__main__.Flight object at 0x0000012F54DA8C10>\n",
+      "********************************************************************************\n",
+      "==== filght에 u 를 할당하기 이전 ====\n",
+      "<__main__.Flight object at 0x0000012F54DA8C10>\n",
+      "<__main__.Flight object at 0x0000012F55F16D10>\n",
+      "날다, fly 원형 메서드\n",
+      "==== filght에 u 를 할당한 이후 ====\n",
+      "<__main__.Flight object at 0x0000012F54DA8C10>\n",
+      "<__main__.Flight object at 0x0000012F54DA8C10>\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''다형성(polymorphism)\n",
+    " - 여러 가지 형태를 가질 수 있는 능력\n",
+    " - 한 가지 기능으로 2개 이상 결과 도출(+ -> 덧셈, 결합연산)\n",
+    " - 상속관계에서만 나오는 용어\n",
+    " - 하나의 참조변수로 여러 타입의 객체를 참조할 수 있는 것\n",
+    "   즉, 부모타입의 참조변수(t)로 자식타입의 객체를 다룰 수 있는 것이 다형성\n",
+    " - 부모 객체 -> 특정 자식 멤버 호출'''\n",
+    "# 다형성(polymorphism) 예제\n",
+    "class Flight: # (1) 부모 클래스\n",
+    "    def fly(self): # 부모 원형 메서드\n",
+    "        print('날다, fly 원형 메서드')\n",
+    "#\n",
+    "class Airplane(Flight) :    # (2) 자식1 클래스 : 비행기\n",
+    "    def fly(self):  # 메서드 재정의\n",
+    "        print('비행기가 날다.')\n",
+    "#\n",
+    "class Bird(Flight) :        # (2) 자식2 클래스 : 새\n",
+    "    def fly(self):  # 메서드 재정의\n",
+    "        print('새가 날다.')\n",
+    "#\n",
+    "class PaperAirplane(Flight) :   # (2) 자식3 클래스 : 종이비행기\n",
+    "    def fly(self):  # 메서드 재정의\n",
+    "        print('종이 비행기가 날다.')\n",
+    "#\n",
+    "# (3) 객체 생성\n",
+    "flight = Flight()   # 부모 클래스의 객체주소를 참조변수flight에 할당함 \n",
+    "air = Airplane()    # 자식1 클래스의 객체주소를 참조변수air에 할당함 \n",
+    "bird = Bird()       # 자식2 클래스의 객체주소를 참조변수bird에 할당함 \n",
+    "paper = PaperAirplane()  # 자식3 클래스의 객체주소를 참조변수paper에 할당함 \n",
+    "#\n",
+    "# (3) 객체 생성-2\n",
+    "print('(3) 객체 생성-2==============>')\n",
+    "flight.fly()    # 날다, fly의 원형 메서드\n",
+    "air.fly()       # 비행기가 날다, fly의 자식1재정의 메서드\n",
+    "bird.fly()      # 새가 날다, fly의 자식2재정의 메서드\n",
+    "paper.fly()     # 종이 비행기가 날다, fly의 자식3재정의 메서드\n",
+    "#\n",
+    "# (4) 다형성\n",
+    "print('(4) 다형성==============>')\n",
+    "# 부모객체 참조변수 = 자식객체(자식1, 자식2, 자식3) 참조변수 (= 할당)\n",
+    "flight = air    # 부모객체 참조변수flight에 자식1객체 참조변수 air를 할당함\n",
+    "flight.fly()    # 비행기가 날다. ---> 참조변수의 외형은 fligh이지만 직전라인에서\n",
+    "                # 자식1객체 참조변수인 air 값을 할당 받은 flight는 자식1객체를 가리키게 되므로\n",
+    "                # 33라인의 air.fly() 와 같은 결과임\n",
+    "#\n",
+    "flight = bird   # 부모객체 참조변수flight에 자식2객체 참조변수 bird를 할당함\n",
+    "flight.fly()    # 새가 날다. ---> 참조변수의 외형은 fligh이지만 직전라인에서\n",
+    "                # 자식2객체 참조변수인 bird 값을 할당 받은 flight는 자식2객체를 가리키게 되므로\n",
+    "                # 35라인의 bird.fly() 와 같은 결과임\n",
+    "#\n",
+    "flight = paper  #부모객체 참조변수flight에 자식2객체 참조변수 paper를 할당함\n",
+    "flight.fly()    # 종이 비행기가 날다.---> 참조변수의 외형은 fligh이지만 직전라인에서\n",
+    "                # 자식2객체 참조변수인 paper 값을 할당 받은 flight는 자식3객체를 가리키게 되므로\n",
+    "                # 36라인의 paper.fly() 와 같은 결과임\n",
+    "                \n",
+    "print('*'*80)\n",
+    "                \n",
+    "class Ufo:\n",
+    "    def fly(self):\n",
+    "        print('UFO가 날아다닙니다.')\n",
+    "        \n",
+    "u = Ufo()\n",
+    "print(u)\n",
+    "\n",
+    "flight = Flight()\n",
+    "print(flight)\n",
+    "\n",
+    "print('*'*80)\n",
+    "print('UFO가 날아다닙니다.')\n",
+    "u = Flight()\n",
+    "print(u)\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "print(\"==== filght에 u 를 할당하기 이전 ====\")\n",
+    "print(u)\n",
+    "print(flight)\n",
+    "#\n",
+    "flight = u\n",
+    "flight.fly()\n",
+    "#\n",
+    "print(\"==== filght에 u 를 할당한 이후 ====\")\n",
+    "print(u)\n",
+    "print(flight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "날다, fly 원형 메서드\n",
+      "비행기가 날다.\n",
+      "새가 날다.\n",
+      "종이 비행기가 날다.\n",
+      "==== filght에 u 를 할당하기 이전 ====\n",
+      "<__main__.Ufo object at 0x0000012F55EF2D10>\n",
+      "<__main__.PaperAirplane object at 0x0000012F55EA2D90>\n",
+      "UFO가 날아다닙니다.\n",
+      "==== filght에 u 를 할당한 이후 ====\n",
+      "<__main__.Ufo object at 0x0000012F55EF2D10>\n",
+      "<__main__.Ufo object at 0x0000012F55EF2D10>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 072일차-실습-4-해답\n",
+    "class Flight: # (1) 부모 클래스\n",
+    "    def fly(self): # 부모 원형 메소드\n",
+    "        print('날다, fly 원형 메서드')\n",
+    "class Airplane(Flight) : # (2) 자식 클래스 : 비행기\n",
+    "    def fly(self): #  메소드 재정의\n",
+    "        print('비행기가 날다.')\n",
+    "class Bird(Flight) : # (2) 자식 클래스 : 새\n",
+    "    def fly(self): #  메소드 재정의\n",
+    "        print('새가 날다.')\n",
+    "class PaperAirplane(Flight) : # (2) 자식 클래스 : 종이비행기\n",
+    "    def fly(self): #  메소드 재정의\n",
+    "        print('종이 비행기가 날다.')\n",
+    "class Ufo(Flight) : # (2) 자식 클래스 : 미확인 비행물체\n",
+    "    def fly(self): #  메소드 재정의\n",
+    "        print('UFO가 날아다닙니다.')\n",
+    "#\n",
+    "# (3) 객체 생성\n",
+    "# 부모 객체 = 자식 객체(자식1, 자식2)\n",
+    "flight = Flight()   # 부모 클래스로부터 객체를 생성하고\n",
+    "                    # 그 주소를 flight참조변수에 할당함\n",
+    "#\n",
+    "air = Airplane()    # 자식1 클래스 객체\n",
+    "bird = Bird()       # 자식2 클래스 객체\n",
+    "paper = PaperAirplane() # 자식3 클래스 객체\n",
+    "u = Ufo()               # 자식4 클래스 객체\n",
+    "#\n",
+    "# (4) 다형성\n",
+    "flight.fly() # '날다, fly 원형 메서드' 라고 출력됨\n",
+    "#\n",
+    "flight = air # 23라인에서 Airplane클래스로부터 만들어진\n",
+    "             # 객체의 주소를 저장한 것이 air 참조변수이다.\n",
+    "             # air참조변수에 저장된 객체의 주소값을 flight참조변수에\n",
+    "             # 할당한다는 개념이다.\n",
+    "flight.fly() # '비행기가 날다.' 라고 출력됨\n",
+    "#\n",
+    "flight = bird\n",
+    "flight.fly() # '새가 날다.' 라고 출력됨\n",
+    "#\n",
+    "flight = paper\n",
+    "flight.fly() # '종이 비행기가 날다.' 라고 출력됨\n",
+    "#\n",
+    "print(\"==== filght에 u 를 할당하기 이전 ====\")\n",
+    "print(u)\n",
+    "print(flight)\n",
+    "#\n",
+    "flight = u\n",
+    "flight.fly()\n",
+    "#\n",
+    "print(\"==== filght에 u 를 할당한 이후 ====\")\n",
+    "print(u)\n",
+    "print(flight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사각형의 넓이와 둘레를 계산합니다.\n",
+      "********************************************************************************\n",
+      "사각형의 넓이 :  50\n",
+      "사각형의 둘레 :  30\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle:\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__(self, a, b):\n",
+    "        self.x = a\n",
+    "        self.y = b\n",
+    "        \n",
+    "    def area_calc(self):\n",
+    "        area = self.x * self.y\n",
+    "        return area\n",
+    "    \n",
+    "    def circum_calc(self):\n",
+    "        circum = (self.x + self.y ) * 2\n",
+    "        return circum\n",
+    "\n",
+    "print('사각형의 넓이와 둘레를 계산합니다.')\n",
+    "rectangle_instance = Rectangle(int(input('사각형의 가로 입력 : ')), int(input('사각형의 세로 입력 : ')))\n",
+    "print('*'*80)\n",
+    "\n",
+    "        \n",
+    "area = rectangle_instance.area_calc()\n",
+    "circum = rectangle_instance.circum_calc()\n",
+    "\n",
+    "print('사각형의 넓이 : ', area)\n",
+    "print('사각형의 둘레 : ', circum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사각형의 넓이와 둘레를 계산합니다.\n",
+      "-----------------------------------\n",
+      "사각형의 넓이: 50\n",
+      "사각형의 둘레: 30\n",
+      "-----------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 072일차-실습-5-해답\n",
+    "class Rectangle:\n",
+    "    width = height = 0\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "    def area_calc(self):\n",
+    "        return self.width * self.height\n",
+    "    def circum_calc(self):\n",
+    "        return (self.width + self.height) * 2\n",
+    "#\n",
+    "print(\"사각형의 넓이와 둘레를 계산합니다.\")\n",
+    "w = int(input(\"사각형의 가로 입력:\"))\n",
+    "h = int(input(\"사각형의 세로 입력:\"))\n",
+    "print(\"-----------------------------------\")\n",
+    "callClass = Rectangle(w, h)\n",
+    "print(\"사각형의 넓이:\",callClass.area_calc())\n",
+    "print(\"사각형의 둘레:\",callClass.circum_calc())\n",
+    "print(\"-----------------------------------\")"
    ]
   }
  ],
