--- a/연습2.ipynb
+++ b/연습2.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
     "        self.__balance += money\n",
     "        \n",
     "    def withdraw(self, money):\n",
-    "        if self.balance < money : ##<<<<<<<<<<<<<<<<<<<<<<< 은닉이 풀린건가요?\n",
+    "        if self.__balance < money : ##<<<<<<<<<<<<<<<<<<<<<<< 은닉이 풀린건가요?\n",
     "            print('잔액 부족')\n",
     "            return\n",
     "        self.__balance -= money\n",
