--- a/과제1.ipynb
+++ b/과제1.ipynb
@@ -99,9 +99,7 @@
     "\n",
     "print('제곱 :  ', obj.squ())\n",
     "\n",
-    "Calc_class14.filter(g_jumin)\n",
-    "    \n",
-    "    "
+    "Calc_class14.filter(g_jumin)\n"
    ]
   },
   {
@@ -859,6 +857,345 @@
     "print(\"사각형의 넓이:\",callClass.area_calc())\n",
     "print(\"사각형의 둘레:\",callClass.circum_calc())\n",
     "print(\"-----------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4, 6, 'final', 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "print(pymysql.version_info)\n",
+    "\n",
+    "config = {\n",
+    "    'host' : '127.0.0.1',\n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work',\n",
+    "    'port' : 3306,\n",
+    "    'charset':'utf8',\n",
+    "    'use_unicode' : True}\n",
+    "\n",
+    "conn = pymysql.connect(**config)\n",
+    "\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "sql = 'show tables'\n",
+    "cursor.execute(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4, 6, 'final', 1)\n",
+      "(('goods',),)\n",
+      "table 있음\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' CRUD : Create, Read, Update, Delete '''\n",
+    "import pymysql\n",
+    "print(pymysql.version_info)\n",
+    "\n",
+    "config = {\n",
+    "    'host' : '127.0.0.1', #로컬호스트. \n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work', #DB명, 원기둥\n",
+    "    'port' : 3306, #일종의 차로같은것. 1차로,2차로, 3차로.\n",
+    "    'charset' : 'utf8', #인코딩하겠다.\n",
+    "    'use_unicode' : True } #한글코드가 깨지지 않게.\n",
+    "\n",
+    "try :\n",
+    "    conn = pymysql.connect(**config)\n",
+    "    cursor = conn.cursor()\n",
+    "    \n",
+    "    sql = 'show tables'\n",
+    "    cursor.execute(sql)\n",
+    "    tables = cursor.fetchall()\n",
+    "    \n",
+    "    print(tables)\n",
+    "    if tables:\n",
+    "        print('table 있음')\n",
+    "    else:\n",
+    "        print('table 없음')\n",
+    "except Exception as e :\n",
+    "    print('db error : ', e)\n",
+    "    conn.rollback() #변경하기전으로 물리자. 에러발생하기전으로 회귀하라.\n",
+    "    \n",
+    "finally:\n",
+    "    cursor.close()\n",
+    "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "db 연동 실패 :  (1064, \"You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near '0)' at line 5\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pymysql\n",
+    "\n",
+    "\n",
+    "config = {\n",
+    "    'host' : '127.0.0.1', #로컬호스트. \n",
+    "    'user' : 'root',\n",
+    "    'password' : 'root1234',\n",
+    "    'database' : 'work', #DB명, 원기둥\n",
+    "    'port' : 3306, #일종의 차로같은것. 1차로,2차로, 3차로.\n",
+    "    'charset' : 'utf8', #인코딩하겠다.\n",
+    "    'use_unicode' : True } #한글코드가 깨지지 않게.\n",
+    "\n",
+    "try :\n",
+    "    conn = pymysql.connect(**config)\n",
+    "    cursor = conn.cursor()\n",
+    "    \n",
+    "    sql = '''create table if not exists item(\n",
+    "        code integer primary key,\n",
+    "        name text(30) unique not null,\n",
+    "        qty integer default 0,\n",
+    "        unit_price real default 0,0)\n",
+    "        '''\n",
+    "        \n",
+    "    cursor.execute(sql)\n",
+    "    conn.commit()\n",
+    "    while True:\n",
+    "        in_code = int(input('회원코드 입력 : '))\n",
+    "        sql = f'select * from item where code = {in_code}'\n",
+    "        cursor.execute(sql)\n",
+    "        rows = cursor.fetchall()\n",
+    "        \n",
+    "        if len(rows) > 0:\n",
+    "            print('존재하는 코드입니다.')\n",
+    "            os.system('pause')\n",
+    "            os.system('cls')\n",
+    "            continue\n",
+    "        else :\n",
+    "            in_name = input('회원명 입력 : ')\n",
+    "            in_qty = int(input('수량 입력 : '))\n",
+    "            in_unit_price = int(input('단가 입력 : '))\n",
+    "            sql = f'insert into item(code,name,qty,unit_price) values({in_code},{in_name},{in_qty}, {in_unit_price})'\n",
+    "            cursor.execute(sql)\n",
+    "            conn.commit()\n",
+    "            print('회원 등록을 성공했습니다.')\n",
+    "            break\n",
+    "        \n",
+    "        cursor.execute('select * from item')\n",
+    "        rows = cursor.fetchall()\n",
+    "        print('===회원조회1===')\n",
+    "        print('(code, name, qty, price)')\n",
+    "        for row in rows:\n",
+    "            print(row)\n",
+    "            \n",
+    "        in_code = int(input('조회할 코드를 입력하세요 : '))\n",
+    "        sql = f'select * from item where code = {in_code}'\n",
+    "        cursor.execute(sql)\n",
+    "        rows = cursor.fetchall()\n",
+    "        if rows:\n",
+    "            for row in rows:\n",
+    "                print('조회결과는 코드 : {}, 제품명 : {}, 수량 : {}, 단가 : {} 입니다.'.format(row[0], row[1], row[2], int(row[3])))\n",
+    "            else:\n",
+    "                print('조회결과 코드 : {}는 없습니다.', format(in_code))\n",
+    "except Exception as e:\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback()\n",
+    "finally:\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---회원관리---\n",
+      "회원    등록 : 1 \n",
+      "회원목록조회 : 2 \n",
+      "회원개별조회 : 3 \n",
+      "회원    수정 : 4 \n",
+      "회원    삭제 : 5 \n",
+      "회원등록을 성공했습니다.\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# 076일차-실습-5-해답 \n",
+    "import os\n",
+    "import sys\n",
+    "import pymysql # MySQL데이터베이스를 사용하기 위한 라이브러리를 등록함\n",
+    "config = {                  # MySQL데이터베이스를 사용하기 위해 환경변수를 딕셔너리로 생성함. \n",
+    "    'host' : '127.0.0.1',   # MySql 이 동작하는 ipv4주소 \n",
+    "    'user' : 'root',        # MySql 설치할 때 정한 계정 \n",
+    "    'passwd' : 'root1234',  # MySql 설치할 때 정한 비밀번호\n",
+    "    'database' : 'test_db', # 생성한 데이터베이스\n",
+    "    'port' : 3306,          # MySql이 응용프로그램과 통신할 때 사용하는 포트번호 리터럴이 아닌 정수값으로 써야함\n",
+    "    'charset' : 'utf8',     # 한글을 사용하겠다는 설정 \n",
+    "    'use_unicode' : True    # 한글을 사용하겠다는 설정 \n",
+    "    }\n",
+    "def mem_create() :\n",
+    "    try :\n",
+    "        # (1) db 연동 객체 \n",
+    "        conn = pymysql.connect(**config)    # 딕셔너리 config를 인수로 사용하여 conn 객체를 만듬.\n",
+    "        # sql 실행 객체 \n",
+    "        cursor = conn.cursor()         # conn 객체로부터 cursor() 메소드를 호출하여 cursor 참조변수를 만듬.\n",
+    "        in_name = input(\"회원 성명을 입력하세요 : \")\n",
+    "        if in_name :\n",
+    "            #print(\"------>>>>\")\n",
+    "            sql = f\"select * from tb1 where NAME = '{in_name}'\"\n",
+    "            cursor.execute(sql)\n",
+    "            rows = cursor.fetchall()\n",
+    "            if len(rows) > 0 :\n",
+    "                print(\"이미 존재하고 있습니다. 다른 코드를 입력하세요\")\n",
+    "            else :\n",
+    "                in_age = int(input(\"나이를 입력하세요 : \")) \n",
+    "                in_num = int(input(\"수량을 입력하세요 : \"))\n",
+    "                sql = f\"insert into tb1(name,age,num) values('{in_name}',{in_age},{in_num})\" \n",
+    "                cursor.execute(sql)\n",
+    "                rows = cursor.fetchall()\n",
+    "                conn.commit()\n",
+    "                print(\"회원등록을 성공했습니다.\")\n",
+    "                print()\n",
+    "        else :\n",
+    "            print(\"회원번호 등록을 위해 이름을 입력해 주세요\")\n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback() # 실행 취소 \n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "def mem_read1() :\n",
+    "    try :\n",
+    "        # (1) db 연동 객체 \n",
+    "        conn = pymysql.connect(**config)    # 딕셔너리 config를 인수로 사용하여 conn 객체를 만듬.\n",
+    "        # sql 실행 객체 \n",
+    "        cursor = conn.cursor()         # conn 객체로부터 cursor() 메소드를 호출하여 cursor 참조변수를 만듬.\n",
+    "\n",
+    "        # (2) 모든 레코드 조회\n",
+    "        cursor.execute(\"select * from tb1\")\n",
+    "        rows = cursor.fetchall()\n",
+    "        print(\"===tb1 테이블 조회1===\")\n",
+    "        print(\"(name, age, num)\")\n",
+    "        for row in rows :\n",
+    "            print(row)\n",
+    "            \n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback() # 실행 취소 \n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "def mem_read2() :\n",
+    "    try :\n",
+    "        # (1) db 연동 객체 \n",
+    "        conn = pymysql.connect(**config)    # 딕셔너리 config를 인수로 사용하여 conn 객체를 만듬.\n",
+    "        # sql 실행 객체 \n",
+    "        cursor = conn.cursor()         # conn 객체로부터 cursor() 메소드를 호출하여 cursor 참조변수를 만듬.\n",
+    "\n",
+    "        # (3) 단일 레코드 조회  \n",
+    "        in_code = input(\"조회할 성명을 입력하세요 : \")\n",
+    "        sql = f\"select * from tb1 where NAME = '{in_code}'\"\n",
+    "        cursor.execute(sql)\n",
+    "        rows = cursor.fetchall()\n",
+    "        if len(rows) > 0 :\n",
+    "            print(\"===tb1 테이블 조회2===\")\n",
+    "            for row in rows :\n",
+    "                print(\"조회결과는 성명:{}, 나이:{}, 수량:{} 입니다.\".format(row[0],int(row[1]),int(row[2])))\n",
+    "        else:\n",
+    "            print(\"조회결과 입력한 이름에 맞는 회원이 없습니다\")\n",
+    "    except Exception as e :\n",
+    "        print('db 연동 실패 : ', e)\n",
+    "        conn.rollback() # 실행 취소 \n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "if __name__ == \"__main__\" :\n",
+    "    while True:\n",
+    "        os.system('cls')\n",
+    "        print(\"---회원관리---\")\n",
+    "        print(\"회원    등록 : 1 \")\n",
+    "        print(\"회원목록조회 : 2 \")\n",
+    "        print(\"회원개별조회 : 3 \")\n",
+    "        print(\"회원    수정 : 4 \")\n",
+    "        print(\"회원    삭제 : 5 \")\n",
+    "        sel = int(input(\"작업을 선택하세요 : \"))\n",
+    "        if sel == 1 :\n",
+    "            mem_create()\n",
+    "            os.system(\"pause\")\n",
+    "        elif sel == 2 :\n",
+    "            mem_read1()\n",
+    "            os.system(\"pause\")\n",
+    "        elif sel == 3 :\n",
+    "            mem_read2()\n",
+    "            os.system(\"pause\")\n",
+    "        elif sel == 4 :\n",
+    "            print(\"회원수정기능은 준비중입니다. \")\n",
+    "            os.system(\"pause\")\n",
+    "        elif sel == 5 :\n",
+    "            print(\"회원삭제기능은 준비중입니다. \")\n",
+    "            os.system(\"pause\")\n",
+    "        else :\n",
+    "            print(\"잘못 선택했습니다. \")\n",
+    "            os.system(\"pause\")\n",
+    "            \n",
+    "# 공돌이는 두괄식"
    ]
   }
  ],
